[package]
name = "bevy-mui"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["crates/*"]

[[example]]
name = "hello_world_ui"
path = "examples/hello_world_ui.rs"

[dependencies]
bevy = "0.15.0"
bevy-mui-core = { path = "crates/bevy-mui-core" }